Integer.valueOf(x) instead of new Integer(x)