@@ -10,7 +10,8 @@ public class ArraysDemo {
 		int arr[] = new int[5];
 
 		arr[0] = 10;
-		arr[1] = new Integer(20); // Autoboxing -- automatically converts objects into primitive types
+//		arr[1] = new Integer(20); // Autoboxing -- automatically converts objects into primitive types
+		arr[1] = Integer.valueOf(20); // alternative for above deprecation
 //		arr[2] = 30.54;
 
 		arr[2] = (int) 30.54;
