@@ -7,7 +7,8 @@ public class Test {
 		System.out.println(product);
 
 		String s = "123";
-		Integer i = new Integer(456);
+//		Integer i = new Integer(456);
+		Integer i = Integer.valueOf(456); // alternative for above deprecation
 
 		System.out.println(s);
 		System.out.println(i);
