@@ -10,7 +10,8 @@ public class Test {
 		String s = new String("Rohan");
 		System.out.println(s);
 
-		Integer i = new Integer(30);
+//		Integer i = new Integer(30);
+		Integer i = Integer.valueOf(30); // alternative for above deprecation - returns Integer object
 		System.out.println(i);
 	}
 
